--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,8 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <build>
+        <testSourceDirectory>src/test</testSourceDirectory>
+    </build>
+
 </project>
